edit logo and edit file index.html

--- a/index.html
+++ b/index.html
@@ -22,32 +22,28 @@
 
 <body>
     <center>
-    <div class="">
-        <div class="col-lg-3" id="card">
+        <div class="">
+            <div class="col-lg-6" id="card">
 
-            <img id="hd" src="temperature.png" alt="logo">
+                <img id="hd" src="logo.png" alt="logo">
 
-        </div>
-        <div class="col-lg-5">
-            <h1>Check Weather by City</h1>
-            <form>
-                <div class="input-group">
-                    <input type="text" style="border:1px solid Violet" style="width:80%" class="form-control" placeholder="Search" aria-label="Search"
-                        id="city">
-                    <button class="btn btn-primary" type="button" style="background-color:SlateBlue" id="getWeather">Search</button>
+            </div>
+            <div class="col-lg-6">
+                <form>
+                    <div class="input-group">
+                        <input type="text" style="border:1px solid  #cce6ff" style="width:80%" class="form-control" placeholder="Search" aria-label="Search"
+                            id="city">
+                        <button class="btn btn-primary" type="button" style="background-color:#1a8cff" id="getWeather">Search</button>
+                    </div>
+                </form>
+                <br>
+                <hr>
+                <div class="" id="forecastbox">
+
                 </div>
-            </form>
-            </h1>
-            <br>
-        </div>
-    </div>
+            </div>
+    </center>
 
-
-    <div class="col-lg-6" id="forecastbox">
-
-    </div>
-    </div>
-</center>
 </body>
 
 </html>
